--- a/frontend/main.kv
+++ b/frontend/main.kv
@@ -1,5 +1,6 @@
 <MainScreen>:
 
+
     MDBottomNavigation:
         panel_color: app.theme_cls.primary_color
         text_color_active: .8, .8, .8, 1
@@ -26,19 +27,32 @@
             icon: 'cog'
             name: "screen3"
             MDScreen:
-                MDScrollView:
-                    size_hint_y: 1
-                    do_scroll_x: False
-                    do_scroll_y: True
 
-                    MDGridLayout:
-                        cols: 1
-                        size_hint_y: None
-                        height: self.minimum_height # !REQUIRED
-                        padding: ('10sp', '20sp', '10sp', '10sp')
-                        spacing: sp(20)
+                GridLayout:
+                    rows: 2
+                    MDTopAppBar:
+                        #size: (app.window.size[0], app.window.size[1] / 10)
+                        title: "KivyMDbook"
+                        elevation: 0
+                        #shadow_softness: 20 # FIXME
+                        radius: sp(12), sp(12), 0, 0
+                        pos_hint: {"top": 1}
+                        left_action_items:
+                            [['menu', lambda x: x]] # do simple switches for setting there
+                            
+                    MDScrollView:
+                        size_hint_y: 1
+                        do_scroll_x: False
+                        do_scroll_y: True
 
-                        M3Label:
-                            text:"text ! # ! @ test ! @ # ! test @  @$ text !! tt !!"
-                        M3Label:
-                            text: "text![] "*1000
+                        MDGridLayout:
+                            cols: 1
+                            size_hint_y: None
+                            height: self.minimum_height # !REQUIRED
+                            padding: ('10sp', '20sp', '10sp', '10sp')
+                            spacing: sp(20)
+
+                            M3Label:
+                                text:"text ! # ! @ test ! @ # ! test @  @$ text !! tt !!"
+                            M3Label:
+                                text: "text![] "*1000
