--- a/frontend/widgets/settings_widgets.kv
+++ b/frontend/widgets/settings_widgets.kv
@@ -1,20 +1,25 @@
-<M3Switch@MDBoxLayout>
-    md_bg_color: 255,255,0
+<M3Switch@GridLayout>
+    cols: 2
     text: ""
-    pos_hint: {"center_y": 0.5, "center_x": 0.5}
+    default_active: False
+    active: m3switch.active
+    on_active: app.function()
 
-    MDCard:
-        md_bg_color: app.theme_cls.bg_dark
-        size_hint_y: m3label.size_hint_y
-        size: m3label.size
-        text: ""
-        pos: m3label.pos
-    
-        GridLayout:
-            cols: 2
+    M3Label:
+        id: m3label
+        text: root.text
 
-            M3Label:
-                id: m3label
-                text: root.text
-
+        AnchorLayout:
+            anchor_x: 'right'
+            size_hint_x: 0.5
+            padding: sp(40)
             MDSwitch:
+                id: m3switch
+                icon_active: "check"
+                icon_inactive: "close"
+                icon_active_color: "white"
+                icon_inactive_color: "black"
+                active: root.active
+                on_active: root.on_active
+
+<M3Button>
