--- a/frontend/widgets/widgets.kv
+++ b/frontend/widgets/widgets.kv
@@ -1,6 +1,5 @@
-
 <M3Label@MDCard>: # FIXME SIZE OF CARD IS NOT DYNAMIC!
-    md_bg_color: app.theme_cls.bg_dark
+    md_bg_color: app.theme_cls.bg_darkest
     size_hint_y: m3label.size_hint_y
     size: m3label.size
     text: ""
@@ -16,19 +15,22 @@
         id: m3label
         size: self.texture_size
         size_hint_y: None
+        color: app.theme_cls.opposite_bg_darkest
+
 
 <M3TopAppBar@MDTopAppBar>
     #size: (app.window.size[0], app.window.size[1] / 10)
     title: "KivyMDbook"
     elevation: 0
-    radius: sp(12), sp(12), 0, 0
     pos_hint: {"top": 1}
-    left_action_items: [['menu', lambda x: x]] # do simple switches for setting there # TODO
+    left_action_items: [['menu', lambda x: x]] # TODO
+
 
 <M3ScrollView@MDScrollView>
     size_hint_y: 1
     do_scroll_x: False
     do_scroll_y: True
+
 
 <M3LabelsColumn@MDGridLayout>
     cols: 1
