--- a/frontend/settings.kv
+++ b/frontend/settings.kv
@@ -15,21 +15,8 @@
                 spacing: sp(90)
 
                 #some widget #TODO
-                GridLayout:
-                    cols: 2
-                        
-                    M3Label:
-                        text: "dark theme"
 
-                    AnchorLayout:
-                        anchor_x: 'right'
-                        size_hint_x: 0.5
-                        padding: sp(40)
-
-                        MDSwitch:
-                            active: True
-                            icon_active: "check"
-                            icon_active_color: "white"
-                            icon_inactive: "close"
-                            icon_inactive_color: "black"
-                            on_active: app.change_theme(self.active)
+                M3Switch:
+                    default_active: True
+                    event: app.change_theme
+                    text: "dark theme"
