--- a/frontend/widgets/settings_widgets.kv
+++ b/frontend/widgets/settings_widgets.kv
@@ -1,25 +1,23 @@
 <M3Switch@GridLayout>
     cols: 2
     text: ""
-    default_active: False
-    active: m3switch.active
-    on_active: app.function()
+    event: app.function()
+    switch_active: app.func_wrap(self.event, m3switch.active)
+    default_active: True
 
     M3Label:
-        id: m3label
         text: root.text
 
-        AnchorLayout:
-            anchor_x: 'right'
-            size_hint_x: 0.5
-            padding: sp(40)
-            MDSwitch:
-                id: m3switch
-                icon_active: "check"
-                icon_inactive: "close"
-                icon_active_color: "white"
-                icon_inactive_color: "black"
-                active: root.active
-                on_active: root.on_active
+    AnchorLayout:
+        anchor_x: 'right'
+        size_hint_x: 0.5
+        padding: sp(40)
 
-<M3Button>
+        MDSwitch:
+            id: m3switch
+            active: root.default_active
+            icon_active: "check"
+            icon_active_color: "white"
+            icon_inactive: "close"
+            icon_inactive_color: "black"
+            on_active: root.switch_active.do() # FIXME fix this in future
