--- a/frontend/settings.kv
+++ b/frontend/settings.kv
@@ -20,3 +20,6 @@
                     default_active: True
                     event: app.change_theme
                     text: "dark theme"
+
+                M3Button:
+                    text: "commit changes"
