added new class for labels

--- a/frontend/main.kv
+++ b/frontend/main.kv
@@ -12,6 +12,8 @@
             name: "screen1"
             icon: 'book'
             
+            LessonScreen:
+            
 
         MDBottomNavigationItem:
             icon: 'twitter'
