added fit image to card in lesson menu

--- a/frontend/widgets/lesson_widgets.kv
+++ b/frontend/widgets/lesson_widgets.kv
@@ -21,3 +21,11 @@
         M3TextLabel:
             font_size: sp(14)
             text: root.subtext
+        
+    AnchorLayout:
+        anchor_x: "center"
+        anchor_y: 'center'
+        
+        FitImage:
+            source: "frontend/images/template.png"
+            #radius: 36, 36, 36, 36
