some new features

--- a/frontend/lesson_menu.kv
+++ b/frontend/lesson_menu.kv
@@ -11,3 +11,4 @@
                 GoToLessonCard:
                     text: "text test some text"
                     subtext: "ultramegatest asap re fbd"
+                    source_to_img: app.path_to("frontend", "images", "template").ext(".png")
