--- a/frontend/widgets/settings_widgets.kv
+++ b/frontend/widgets/settings_widgets.kv
@@ -1,7 +1,7 @@
 <M3Switch@GridLayout>
     cols: 2
     text: ""
-    event: app.function()
+    event: app.like.wrapped_bool_function
     switch_active: app.func_wrap(self.event, m3switch.active)
     default_active: True
 
