--- a/frontend/lesson_menu.kv
+++ b/frontend/lesson_menu.kv
@@ -11,4 +11,5 @@
                 GoToLessonCard:
                     text: "text test some text"
                     subtext: "ultramegatest asap re fbd"
+                    go_to: "first_steps"
                     source_to_img: app.path_to("frontend", "images", "template").ext(".png")
