--- a/frontend/main.kv
+++ b/frontend/main.kv
@@ -2,12 +2,14 @@
     
     MDBottomNavigation:
         panel_color: app.theme_cls.primary_color
-        text_color_active: .8, .8, .8, 1
-        text_color_normal: .2, .2, .2, 1
-        selected_color_background: 0, 0, 0, 0 # FIXME define colors for light theme
+        text_color_active: .8, .8, .8, 1 # FIXME define colors for light theme
+        text_color_normal: app.get_inactive_icon_color()
+        selected_color_background: 0, 0, 0, 0 
         use_text: False
         radius: sp(12), sp(12), 0, 0
-
+        transition: app.transition
+        transition_duration: app.transition_duration
+        
         MDBottomNavigationItem:
             name: "screen1"
             icon: 'book'
