--- a/frontend/main.kv
+++ b/frontend/main.kv
@@ -1,15 +1,16 @@
 <MainScreen>:
     
     MDBottomNavigation:
+        id: nav
         panel_color: app.theme_cls.primary_color
-        text_color_active: .8, .8, .8, 1 # FIXME define colors for light theme
+        text_color_active: app.get_active_icon_color()
         text_color_normal: app.get_inactive_icon_color()
-        selected_color_background: 0, 0, 0, 0 
-        use_text: False
-        radius: sp(12), sp(12), 0, 0
         transition: app.transition
         transition_duration: app.transition_duration
-        
+        #selected_color_background: 0, 0, 0, 0 # FIXME define colors for light theme
+        use_text: False
+        radius: sp(12), sp(12), 0, 0
+
         MDBottomNavigationItem:
             name: "screen1"
             icon: 'book'
