--- a/frontend/main.kv
+++ b/frontend/main.kv
@@ -5,7 +5,7 @@
         panel_color: app.theme_cls.primary_color
         text_color_active: app.get_active_icon_color()
         text_color_normal: app.get_inactive_icon_color()
-        transition: app.transition
+        transition: app.get_transition_class
         transition_duration: app.transition_duration
         #selected_color_background: 0, 0, 0, 0 # FIXME define colors for light theme
         use_text: False
