--- a/frontend/settings.kv
+++ b/frontend/settings.kv
@@ -1,4 +1,4 @@
-<SettingsScreen@MDScreen>
+<SettingsScreen>
     name: "settings_screen"
 
     GridLayout:
@@ -12,11 +12,21 @@
                 orientation: 'vertical'
                 height: self.minimum_height
                 size_hint_y: None
-                padding: sp(10)
-                spacing: sp(90)
+                padding: sp(20)
+                spacing: sp(60)
 
 
                 M3Switch:
                     default_active: True
                     event: app.change_theme
                     text: "dark theme"
+
+
+                MDSeparator:
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    MDDropDownItem:
+                        text: "transitions"
+                        id: transition_backdrop
+                        on_release: root.open_transition_backdrop()
