--- a/view/widgets/lesson_widgets.kv
+++ b/view/widgets/lesson_widgets.kv
@@ -7,7 +7,7 @@
     go_to: app.like.screen_name
     pos: text_box.pos
     shadow_color: 0, 0, 0, 0
-    ripple_behavior: True #not for this widget, but cool #TODO
+    ripple_behavior: True
     on_touch_up: app.sm.current=self.go_to
     source_to_img: app.like.path # TODO app.like.path and app.like.function
 
