--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -1,9 +1,9 @@
 <M3TextLabel@MDLabel>
     font_size: sp(16)
     color: app.theme_cls.opposite_bg_darkest
+    
 
-
-<M3Label@MDCard>: # FIXME SIZE OF CARD IS NOT DYNAMIC!
+<M3Label@MDCard>:
     md_bg_color: app.theme_cls.bg_darkest
     size_hint_y: m3label.size_hint_y
     size: m3label.size
