--- a/view/screens/bottom_nav_screens/settings.kv
+++ b/view/screens/bottom_nav_screens/settings.kv
@@ -21,6 +21,12 @@
                     event: app.change_theme
                     text: "dark theme"
 
+                M3Switch:
+                    default_active: True
+                    event: app.change_theme_animation
+                    text: "theme change animation"
+
+                M3Space:
 
                 MDSeparator:
 
