--- a/view/main.kv
+++ b/view/main.kv
@@ -15,7 +15,7 @@
             name: "screen1"
             icon: 'book'
             
-            LessonScreen:
+            LessonMenu:
             
 
         MDBottomNavigationItem:
