--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -11,8 +11,9 @@
             M3LabelsColumn:
 
                 M3Label:
-                    text: "Hello text"
-                                
+                    text: """Здраствуйте, это имплементация учебника %book_name% в виде мобильного приложения\nГлава 1. Правила оформления чертежа по ГОСТ'у"""
+                    # TODO CREATE DATATABLES WIDGETS
+                    # TODO CREATE TEXT_LOADER MODULE
                 MDSeparator:
                 
                 M3Label:
