added text_manager module

--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -11,7 +11,7 @@
             M3LabelsColumn:
 
                 M3Label:
-                    text: """Здраствуйте, это имплементация учебника %book_name% в виде мобильного приложения\nГлава 1. Правила оформления чертежа по ГОСТ'у"""
+                    text: app.text_manager.node("first_steps").get("hello_text")
                     # TODO CREATE DATATABLES WIDGETS
                     # TODO CREATE TEXT_LOADER MODULE
                 MDSeparator:
