minor changes + test web on mobile

--- a/view/screens/bottom_nav_screens/settings.kv
+++ b/view/screens/bottom_nav_screens/settings.kv
@@ -36,3 +36,12 @@
                         text: "transitions"
                         id: transition_backdrop
                         on_release: root.open_transition_backdrop()
+                
+                MDSeparator:
+                
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_x: 'center'
+                    MDRaisedButton:
+                        text: "redirect to gh"
+                        on_release: root.test_web()
