--- a/view/widgets/lesson_widgets.kv
+++ b/view/widgets/lesson_widgets.kv
@@ -1,5 +1,5 @@
 <GoToLessonCard@MDCard>
-    md_bg_color: app.theme_cls.bg_darkest
+    #md_bg_color: app.theme_cls.bg_darkest
     size_hint_y: text_box.size_hint_y
     size: text_box.size
     text: ""
