Lightening the application'

--- a/view/screens/bottom_nav_screens/lesson_menu.kv
+++ b/view/screens/bottom_nav_screens/lesson_menu.kv
@@ -12,4 +12,4 @@
                     text: "text test some text"
                     subtext: "ultramegatest asap re fbd"
                     go_to: "first_steps"
-                    source_to_img: app.path_to("view", "images", "template").ext(".png")
+                    source_to_img: app.path_to("view", "images", "template", ext=".png")
