--- a/view/widgets/settings_widgets.kv
+++ b/view/widgets/settings_widgets.kv
@@ -3,7 +3,7 @@
     text: ""
     event: app.like.bool_function
     switch_active: app.func_wrap(self.event, m3switch.active)
-    default_active: True
+    default_active: True # FIXME
 
     M3Label:
         text: root.text
