--- a/view/screens/bottom_nav_screens/lesson_menu.kv
+++ b/view/screens/bottom_nav_screens/lesson_menu.kv
@@ -9,7 +9,7 @@
             M3LabelsColumn:
 
                 GoToLessonCard:
-                    text: "text test some text"
-                    subtext: "ultramegatest asap re fbd"
+                    text: "Глава 1. Правила черчения"
+                    subtext: "Шрифт, размер, карандаши, ГОСТ"
                     go_to: "first_steps"
-                    source_to_img: app.path_to("view", "images", "template", ext=".png")
+                    #source_to_img: app.path_to("view", "images", "template", ext=".png")
