--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -12,12 +12,12 @@
     size_hint_y: m3label.size_hint_y
     size: m3label.size
     text: ""
-    style: "filled"
+    #style: "filled"
     pos: m3label.pos
-    elevation: 12
-    shadow_softness: 200
-    #shadow_color: 0, 0, 0, 0
-
+    elevation: 4
+    shadow_softness: 14
+    shadow_color: 0, 0, 0, 0.65
+    
     M3TextLabel:
         padding: sp(15), sp(15)
         valign: "bottom"
