--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -17,7 +17,7 @@
     elevation: 4
     shadow_softness: 14
     shadow_color: 0, 0, 0, 0.65
-    
+
     M3TextLabel:
         padding: sp(15), sp(15)
         valign: "bottom"
@@ -51,7 +51,6 @@
     padding: ('10sp', '20sp', '10sp', '10sp')
     spacing: sp(20)
 
-
 <M3Button@AnchorLayout>
     text: ""
     anchor_x: "center"
@@ -62,9 +61,9 @@
         text: root.text
         font_size: sp(16)
         text_shadow: 0
-        elevation: 0
-        #shadow_color: 0,0,0,0
-        #radius: 16,16,16,16
+        elevation: 4
+        shadow_softness: 14
+        shadow_color: 0, 0, 0, 0.85
         rounded_button: True
         on_release: root.event()
         text_color: app.theme_cls.opposite_bg_darkest # TODO SOLVE PROBLEMS WITH THEMES!!!
