small changes at GoToLessonCard

--- a/view/screens/bottom_nav_screens/settings.kv
+++ b/view/screens/bottom_nav_screens/settings.kv
@@ -49,7 +49,4 @@
                         event: root.test_web
 
                 M3Label:
-                    text: "Метаданные процесса"
-
-                M3Label:
-                    text: app.formatted_metadata
+                    text: f"Метаданные процесса:\n{app.formatted_metadata}"
