--- a/view/widgets/lesson_widgets.kv
+++ b/view/widgets/lesson_widgets.kv
@@ -13,6 +13,7 @@
     on_touch_up: app.sm.current=self.go_to
 
     MDBoxLayout:
+        spacing: sp(15)
         orientation: "vertical"
         padding: sp(7), sp(7)
         size_hint_y: None
