--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -63,6 +63,7 @@
         text_shadow: 0
         elevation: 4
         shadow_softness: 14
+        shadow_radius: 16,16,16,16
         shadow_color: 0, 0, 0, 0.85
         rounded_button: True
         on_release: root.event()
