--- a/view/screens/bottom_nav_screens/settings.kv
+++ b/view/screens/bottom_nav_screens/settings.kv
@@ -17,12 +17,12 @@
 
 
                 M3Switch:
-                    default_active: True
+                    widget_default_active: True
                     event: app.change_theme
                     text: "dark theme"
 
                 M3Switch:
-                    default_active: True
+                    widget_default_active: True
                     event: app.change_theme_animation
                     text: "theme change animation"
 
@@ -45,7 +45,7 @@
                     anchor_x: 'center'
 
                     M3Button:
-                        text: "redirect to gh"
+                        text: "redirect to github"
                         event: root.test_web
 
                 M3Label:
