--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -6,8 +6,9 @@
     orientation: "vertical"
     size_hint_y: 0.05
 
+<M3Label@MDLabel>
 
-<M3Label@MDCard>:
+<MD3Label@MDCard>
     #md_bg_color: app.theme_cls.bg_darkest
     size_hint_y: m3label.size_hint_y
     size: m3label.size
@@ -18,7 +19,7 @@
     shadow_softness: 14
     shadow_color: 0, 0, 0, 0.65
 
-    M3TextLabel:
+    MDLabel:
         padding: sp(15), sp(15)
         valign: "bottom"
         halign: "left"
