change scroll widget

--- a/view/screens/bottom_nav_screens/example.kv
+++ b/view/screens/bottom_nav_screens/example.kv
@@ -15,3 +15,6 @@
                                 
                 M3Label:
                     text: "text![] "*10
+
+                M3Label:
+                    text: "s"
