--- a/view/screens/bottom_nav_screens/settings.kv
+++ b/view/screens/bottom_nav_screens/settings.kv
@@ -6,7 +6,7 @@
 
         #M3TopAppBar:
 
-        M3ScrollView:
+        M3RecycleView:
         
             MDBoxLayout:
                 orientation: 'vertical'
