--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -39,8 +39,11 @@
     orientation: 'vertical'
     size_hint_y: None
     height: self.minimum_height # !REQUIRED
-    padding: ('12sp', '12sp', '12sp', '12sp')
+    padding: ('15sp', '15sp', '15sp', '15sp')
     spacing: sp(20)
+
+<M3SettingsColumn@M3LabelsColumn>
+    spacing: sp(60)
 
 <M3Button@MDRaisedButton>
     font_size: sp(16)
