--- a/view/main.kv
+++ b/view/main.kv
@@ -1,12 +1,13 @@
+##:import NoTransition kivy.uix.screenmanager
+
 <MainScreen>:
     
     MDBottomNavigation:
         id: nav
-        panel_color: app.theme_cls.primary_color
+        #panel_color: app.theme_cls.primary_color
         #text_color_active: app.get_active_icon_color()
         #text_color_normal: app.get_inactive_icon_color()
         transition: app.no_transition
-        transition_duration: app.transition_duration
         #selected_color_background: 0, 0, 0, 0 # FIXME define colors for light theme
         use_text: False
         radius: sp(12), sp(12), 0, 0
