--- a/view/screens/bottom_nav_screens/lesson_menu.kv
+++ b/view/screens/bottom_nav_screens/lesson_menu.kv
@@ -8,7 +8,7 @@
 
             M3LabelsColumn:
 
-                GoToLessonCard2:
+                GoToLessonCard:
                     text: "Глава 1. Правила черчения"
                     secondary_text: "Шрифт, размер, карандаши, ГОСТ"
                     go_to: "first_steps"
