--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -14,6 +14,12 @@
                     text: app.text_manager.node("first_steps").get("hello_text")
                     
                 MDSeparator:
+
+                Image:
+                    source: "view/images/default.jpg"
+                    size: 615,409
+                    padding: 0, 0
+                    size_hint_y: None #!REQUIRED
                 
                 M3Label:
                     text: "text![] "*10
