--- a/view/widgets/lesson_widgets.kv
+++ b/view/widgets/lesson_widgets.kv
@@ -5,11 +5,8 @@
     text: ""
     subtext: ""
     go_to: app.like.screen_name
-    #pos: text_box.pos
+    pos: text_box.pos
     ripple_behavior: True
-    elevation: 4
-    shadow_softness: 14
-    shadow_color: 0, 0, 0, 0.65
     on_touch_up: app.sm.current=self.go_to
 
     MDBoxLayout:
