--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -1,6 +1,6 @@
 <M3TextLabel@MDLabel>
     font_size: sp(16)
-    color: app.theme_cls.opposite_bg_darkest
+    #color: app.theme_cls.opposite_bg_darkest
     
 <M3Space@MDBoxLayout>:
     orientation: "vertical"
@@ -33,7 +33,7 @@
     left_action_items: [['subdirectory-arrow-left', app.switch_to_main]] # TODO
 
 
-<M3ScrollView@MDRecycleView>
+<M3ScrollView@MDScrollView>
     size_hint_y: 1
     do_scroll_x: False
     do_scroll_y: True
@@ -56,11 +56,7 @@
     MDRaisedButton:
         text: root.text
         font_size: sp(16)
-        text_shadow: 0
-        elevation: 4
-        shadow_softness: 14
-        shadow_radius: 16,16,16,16
-        shadow_color: 0, 0, 0, 0.85
+        elevation: 0
         rounded_button: True
         on_release: root.event()
         text_color: app.theme_cls.opposite_bg_darkest # TODO SOLVE PROBLEMS WITH THEMES!!!
