--- a/view/screens/bottom_nav_screens/lesson_menu.kv
+++ b/view/screens/bottom_nav_screens/lesson_menu.kv
@@ -8,8 +8,8 @@
 
             M3LabelsColumn:
 
-                GoToLessonCard:
-                    text: "Глава 1. Правила черчения"
-                    subtext: "Шрифт, размер, карандаши, ГОСТ"
-                    go_to: "first_steps"
+                #GoToLessonCard:
+                    #text: "Глава 1. Правила черчения"
+                    #subtext: "Шрифт, размер, карандаши, ГОСТ"
+                    #go_to: "first_steps"
                     #source_to_img: app.path_to("view", "images", "template", ext=".png")
