--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -15,11 +15,12 @@
                     
                 MDSeparator:
 
-                Image:
+                ZoomingImage:
                     source: "view/images/default.jpg"
-                    size: 615,409
+                    size: self.texture_size
                     padding: 0, 0
                     size_hint_y: None #!REQUIRED
+                    
                 
                 M3Label:
                     text: "text![] "*10
