--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -20,7 +20,7 @@
     title: "KivyMDbook"
     elevation: 0
     pos_hint: {"top": 1}
-    left_action_items: [['subdirectory-arrow-left', app.switch_to_main]] # TODO
+    left_action_items: [['arrow-left-bold', app.switch_to_main]] # TODO
 
 
 <M3RecycleView@MDRecycleView>
