removed unused theme_manager module and other code refactoring

--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -16,7 +16,7 @@
                 MDSeparator:
 
                 ZoomingImage:
-                    source: "view/images/random.jpg"
+                    source: app.path_to("view", "images", "random", ext=".jpg")
                     size: self.texture_size
                     padding: 0, 0
                     size_hint_y: None #!REQUIRED
