Updated ZoomingImage, now it create Screen (not ModalView)

--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -16,7 +16,7 @@
                 MDSeparator:
 
                 ZoomingImage:
-                    source: "view/images/default.jpg"
+                    source: "view/images/random.jpg"
                     size: self.texture_size
                     padding: 0, 0
                     size_hint_y: None #!REQUIRED
