--- a/view/widgets/imagecontainer/imagecontainer.kv
+++ b/view/widgets/imagecontainer/imagecontainer.kv
@@ -1,2 +1,4 @@
-<ZoomingImage>
-    on_touch_down: self.show_dialog()
+<ZoomingImageScreen>
+    ZoomingImageScreenAppBar:
+        md_bg_color: app.theme_cls.bg_light
+        left_action_items: [["subdirectory-arrow-left", root.back_to_root_screen]]
