fix yet another bug of top app bars

--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -20,7 +20,7 @@
     anchor_title: "left"
     #title: "KivyMDbook"
     elevation: 5
-    shadow_softness: 12 # TODO
+    shadow_softness: 12
     pos_hint: {"top": 1}
     left_action_items: [['arrow-left-bold', app.switch_to_main]] # TODO
 
