--- a/view/widgets/imagecontainer/imagecontainer.kv
+++ b/view/widgets/imagecontainer/imagecontainer.kv
@@ -22,3 +22,5 @@
         md_bg_color: app.theme_cls.bg_light
         left_action_items: [["arrow-left-bold", root.back_to_root_screen]]
         right_action_items: [["download", lambda x=None: print("TODO")]] # TODO:
+        elevation: 5
+        shadow_softness: 12
