--- a/view/main.kv
+++ b/view/main.kv
@@ -7,11 +7,10 @@
         #panel_color: app.theme_cls.primary_color
         text_color_active: app.get_active_icon_color()
         #text_color_normal: app.get_inactive_icon_color()
+        transition_duration: app.transition_duration
         transition: app.no_transition
         selected_color_background: app.theme_cls.primary_dark # FIXME define colors for light theme
         use_text: False
-        elevation: 12
-        shadow_softness: 7
         radius: sp(12), sp(12), 0, 0
 
 
