--- a/view/widgets/imagecontainer/imagecontainer.kv
+++ b/view/widgets/imagecontainer/imagecontainer.kv
@@ -1,7 +1,7 @@
 <ZoomingImageScreen>
 
     BoxLayout:
-        #md_bg_color: 1, 1, 1, 0.4
+        size_hint_y: 0.9
         orientation:'vertical'
 
         AnchorLayout:
@@ -24,3 +24,4 @@
         right_action_items: [["download", lambda x=None: print("TODO")]] # TODO:
         elevation: 5
         shadow_softness: 12
+        pos_hint: {"top": 1}
