--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -3,7 +3,7 @@
 
     MDBoxLayout:
         orientation: 'vertical'
-        size_hint_y: 0.9
+        size_hint_y: 0.9 # FIXME. text bug on mobile
 
         M3ScrollView:
 
