--- a/view/main.kv
+++ b/view/main.kv
@@ -7,8 +7,8 @@
         #panel_color: app.theme_cls.primary_color
         text_color_active: app.get_active_icon_color()
         #text_color_normal: app.get_inactive_icon_color()
-        transition_duration: app.transition_duration
-        transition: app.no_transition
+        transition_duration: app.nav_transition_duration
+        transition: app.nav_transition
         selected_color_background: app.theme_cls.primary_dark # FIXME define colors for light theme
         use_text: False
         radius: sp(12), sp(12), 0, 0
