fix text bug (mobile) in lesson screens, add bug in transitions.

--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -2,6 +2,7 @@
     name: "first_steps"
 
     MDBoxLayout:
+        height: root.height - toolbar.height
         orientation: 'vertical'
         size_hint_y: 0.9 # FIXME. text bug on mobile
 
@@ -24,3 +25,5 @@
                     text: "text![] "*10
 
     M3TopAppBar:
+        id: toolbar
+        size_hint_y: None
