--- a/view/widgets/imagecontainer/imagecontainer.kv
+++ b/view/widgets/imagecontainer/imagecontainer.kv
@@ -1,5 +1,4 @@
 <ZoomingImageScreen>
-
     BoxLayout:
         size_hint_y: 0.9
         orientation:'vertical'
@@ -9,7 +8,7 @@
             anchor_y: 'center'
 
             ScatterImage:
-                size: sp(1000), sp(1000)
+                size: sp(1000), sp(1000) #TODO: window size ?
                 size_hint: None,None
                 pos_hint: {"center_x": 0.5, "center_y": 0.5}
 
